--- a/webook-fe/package.json
+++ b/webook-fe/package.json
@@ -1,27 +1,36 @@
 {
   "name": "webook-fe",
+  "version": "0.1.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "axios": "^1.7.8",
-    "element-plus": "^2.8.8",
-    "vue": "^3.5.12",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "sass": "^1.81.0",
-    "typescript": "~5.6.2",
-    "vite": "^5.4.10",
-    "vue-tsc": "^2.1.8"
+    "@ant-design/pro-components": "^2.6.12",
+    "@tiptap/pm": "^2.1.8",
+    "@tiptap/react": "^2.1.8",
+    "@tiptap/starter-kit": "^2.1.8",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
+    "antd": "^5.7.0",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.10",
+    "moment": "^2.29.4",
+    "next": "13.4.10",
+    "postcss": "8.4.26",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6"
   }
 }
