mongoDB docker脚本与链接测试

--- a/webook/docker-compose.yaml
+++ b/webook/docker-compose.yaml
@@ -15,6 +15,13 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
+  mongo:
+    image: mongo:latest
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=123456
+    ports:
+       - "27017:27017"
   etcd:
     image: 'bitnami/etcd:latest'
     environment:
